--- a/src/mygame/index.html
+++ b/src/mygame/index.html
@@ -7,6 +7,7 @@
     <title>hi</title>
 </head>
 <body>
-    
+    <script src="init.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
