--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hi</title>
+    <title>Document</title>
 </head>
 <body>
-    
+    <p>"hi"</p>
+    <a href="public/mygame/index.html">game</a>
 </body>
 </html>
