--- a/public/mygame/index.html
+++ b/public/mygame/index.html
@@ -7,7 +7,8 @@
     <title>hi</title>
 </head>
 <body>
-    <script src="init.js"></script>
-    <script src="main.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.js"></script>
+    <script src="scripts/mainScene.js"></script>
+    <script src="scripts/init.js"></script>
 </body>
 </html>
